--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "npx serve dist --cors -l 3001"
   },
   "dependencies": {
     "@originjs/vite-plugin-federation": "^1.4.1",
