feat: se agregaron filtros avanzados y contador

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@originjs/vite-plugin-federation": "^1.4.1",
+    "lucide-react": "^0.508.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tarjeta-lib": "file:tarjeta-lib-1.0.0.tgz"
