--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
   "name": "mfe-character-list",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "serve": "npx serve dist --cors -l 3001"
+    "dev": "webpack serve --config webpack.config.js",
+    "build": "webpack --config webpack.config.js"
   },
   "dependencies": {
-    "@originjs/vite-plugin-federation": "^1.4.1",
     "@reduxjs/toolkit": "^2.8.1",
     "lucide-react": "^0.508.0",
     "react": "^19.1.0",
@@ -22,20 +17,22 @@
     "tarjeta-lib": "file:tarjeta-lib-1.0.0.tgz"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.4.1",
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@types/react-dom": "^19.1.3",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.3.5",
+    "postcss-loader": "^8.1.1",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "webpack": "^5.99.8",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   }
 }
