--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "react-spinners": "^0.17.0",
     "redux-persist": "^6.0.0",
     "tarjeta-lib": "file:tarjeta-lib-1.0.0.tgz"
   },
